completed sendMessage functionality & updated api
